--- a/.github/workflows/sandpaper-main.yaml
+++ b/.github/workflows/sandpaper-main.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: "Checkout Lesson"
         uses: actions/checkout@v4
 
+      - name: "Install system dependencies"
+        run: sudo apt-get update && sudo apt-get install -y gsfonts libfftw3-dev libglpk-dev libmagick++-dev pandoc
+
       - name: "Set up R"
         uses: r-lib/actions/setup-r@v2
         with:
